# control_by_web_x4xx_interface

./: .gitignore  CMakeLists.txt  README.md  interface_notes.txt  package.xml  setup.py
msg/: X4xx_relay_current_status.msg  X4xx_status.msg
nodes/: .cbw_X4xx_interface.py.kate-swp  cbw_X4xx_interface.py  cbw_x4xx_node.py
refs/: test_parse_relays.py
scripts/: poll_X4xx.py
