<?xml version="1.0"?>
<package format="2">
  <name>control_by_web_x4xx_interface</name>
  <version>0.0.1</version>
  <description>Poll status and accept relay commands for Control By Web X4xx series devices</description>

  <maintainer email="andrew.obrien@tgfoe.org">Andy O'Brien</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
